Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub)

Change Log:
----------------------------------------------------------------------

2.0.9
----------------------------------------------------------------------
- Fix: Fixed issue with WP sidebar chooser right after creating a new sidebar.
- Fix: Fixed various issues when flagging a sidebar s replaceable.
- Minor fix: Make code compatible with PHP 5.2.4
- Minor fix: Slight improvement of ajax stability

2.0.8
----------------------------------------------------------------------
- Fix: Fixed issue with settings not being saved correctly.

2.0.7
----------------------------------------------------------------------
- Fix: Fixed issue with some people losing some sidebar settings after update.

2.0.6.1
----------------------------------------------------------------------
- Minor fix: Use WordPress core functions to get URL to javascript files.
- Minor fix: Refactor function name to avoid misunderstandings.

2.0.6
----------------------------------------------------------------------
- Fixed: Widgets that are registered via old API no longer break the page (again).
- Fixed: After importing data the widgets page is reloaded to show new sidebars.
- Fixed: Warnings by BuddyPress about using bp_current_user too early.

2.0.5
----------------------------------------------------------------------
- Fixed: Meta box in post editor did show missing sidebars (e.g. after switching the theme)
- Fixed: PHP warning about strict standards.

2.0.4
----------------------------------------------------------------------
- Fixed: Widgets that are registered via old API no longer break the page.

2.0.3
----------------------------------------------------------------------
- Fixed: Javascript errors on Windows servers are fixed.

2.0.2
----------------------------------------------------------------------
- Fixed: Dashboard notification is now removed when clicking "dismiss"

2.0.1